remise du config

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,1 +1,8 @@
 
+; path du fichier de la base de donnée
+dataPath = DataBase
+
+; path des fichirs img vetements
+
+imgPathH = ../view/img/vetement/homme/
+imgPathF = ../view/img/vetement/femme/
