grosse modif model

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,5 +4,4 @@ dataPath = DataBase
 
 ; path des fichirs img vetements
 
-imgPathH = ../view/img/vetement/homme/
-imgPathF = ../view/img/vetement/femme/
+imgPath = ../view/img/vetement/
