WOW ENORME CA FONCTIONNE

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,3 +5,7 @@ dataPath = DataBase
 ; path des fichirs img vetements
 
 imgPath = ../view/img/vetement/
+
+; path fonctionnat que chez moi avec XXAMP
+
+dataPathLocalAntoine = C:\xampp\htdocs\git\model\DataBase
