--- a/config/config.ini
+++ b/config/config.ini
@@ -9,3 +9,4 @@ imgPath = ../view/img/vetement/
 ; path fonctionnat que chez moi avec XXAMP
 
 dataPathLocalAntoine = C:\xampp\htdocs\git\model\DataBase
+dataPathLocalBarth = D:\Xampp\htdocs\ProjetPHP\model\DataBase
