Début vue modification

--- a/config/config.ini
+++ b/config/config.ini
@@ -2,11 +2,16 @@
 ; path du fichier de la base de donnée
 dataPath = DataBase
 
-; path des fichirs img vetements
+; path des fichiers img vetements
 
 imgPath = ../view/img/vetement/
 
-; path fonctionnat que chez moi avec XXAMP
+; path fonctionnat que chez nous avec XAMPP
 
 dataPathLocalAntoine = C:\xampp\htdocs\git\model\DataBase
 dataPathLocalBarth = D:\Xampp\htdocs\ProjetPHP\model\DataBase
+
+
+
+file_uploads = On
+upload_dir = ../view/img/vetement/
