push connexion non fonctionnelle

--- a/config/config.ini
+++ b/config/config.ini
@@ -10,6 +10,7 @@ imgPath = ../view/img/vetement/
 
 dataPathLocalAntoine = C:\xampp\htdocs\git\model\DataBase
 dataPathLocalBarth = D:\Xampp\htdocs\ProjetPHP\model\DataBase
+dataPathLocalJerome = C:\xampp\htdocs\git\ProjetPHP\model\DataBase
 
 
 
